# SEO_MultiAgent_Analyzer

./: .gitignore  Last_seo_agent.py.txt  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/agent/: __init__.py  seo_agent.py
src/api/: main.py
src/database/: models.py
src/integrations/: __init__.py  gtmetrix.py
